--- a/sys/windows/Makefile.nmake
+++ b/sys/windows/Makefile.nmake
@@ -692,15 +692,15 @@ HACKINCL = \
 	$(INCL)objects.h    $(INCL)objclass.h $(INCL)optlist.h \
 	$(INCL)patchlevel.h $(INCL)pcconf.h   $(INCL)permonst.h \
 	$(INCL)prop.h       $(INCL)rect.h     $(INCL)region.h \
-	$(INCL)savefile.h   $(INCL)selvar.h   $(INCL)sym.h \
-	$(INCL)rm.h         $(INCL)sp_lev.h   $(INCL)spell.h \
-	$(INCL)sndprocs.h   $(INCL)seffects.h $(INCL)stairs.h \
-	$(INCL)sys.h        $(INCL)tcap.h     $(INCL)timeout.h \
-	$(INCL)tradstdc.h   $(INCL)trap.h     $(INCL)unixconf.h \
-	$(INCL)vision.h     $(INCL)vmsconf.h  $(INCL)wintty.h \
-	$(INCL)wincurs.h    $(INCL)winX.h     $(INCL)winprocs.h \
-	$(INCL)wintype.h    $(INCL)you.h      $(INCL)youprop.h \
-	$(INCL)weight.h
+	$(INCL)savefile.h   $(INCL)selvar.h   $(INCL)sfprocs.h \
+	$(INCL)sym.h        $(INCL)rm.h       $(INCL)sp_lev.h \
+	$(INCL)spell.h      $(INCL)sndprocs.h $(INCL)seffects.h \
+	$(INCL)stairs.h     $(INCL)sys.h      $(INCL)tcap.h \
+	$(INCL)timeout.h    $(INCL)tradstdc.h $(INCL)trap.h \
+	$(INCL)unixconf.h   $(INCL)vision.h   $(INCL)vmsconf.h \
+	$(INCL)wintty.h     $(INCL)wincurs.h  $(INCL)winX.h \
+	$(INCL)winprocs.h   $(INCL)wintype.h  $(INCL)you.h \
+	$(INCL)youprop.h    $(INCL)weight.h
 
 LUA_FILES = $(DAT)asmodeus.lua $(DAT)baalz.lua $(DAT)bigrm-1.lua \
 	$(DAT)bigrm-10.lua $(DAT)bigrm-11.lua $(DAT)bigrm-12.lua \
