--- a/sys/unix/Makefile.utl
+++ b/sys/unix/Makefile.utl
@@ -118,6 +118,12 @@ LIBS =
 
 OBJDIR = ../src
 
+# This is the universal ctags utility which produces the tags in the
+# format that util/readtags requires. 
+# https://github.com/universal-ctags/ctags.git
+#CTAGSCMD = universal-ctags
+CTAGSCMD = ctags
+
 # if you change this to 1, feedback while building will omit -Dthis -Wthat
 # -Isomewhere so that each file being compiled is listed on one short line;
 # it requires support for '$<' in rules with more than one prerequisite
@@ -288,6 +294,166 @@ recover.o: recover.c $(CONFIG_H)
 
 recover-version.o: ../src/version.c $(HACK_H)
 	$(CC) $(CFLAGS) $(CSTD) -DMINIMAL_FOR_RECOVER -c ../src/version.c -o $@
+#
+#       dependencies for optional sfctool
+#
+# object files for sfctool utility
+SFCTOOLOBJS = $(TARGETPFX)sfctool.o $(TARGETPFX)sf-alloc.o \
+	    $(TARGETPFX)sf-monst.o $(TARGETPFX)sf-objects.o \
+	    $(TARGETPFX)sfbase.o $(TARGETPFX)sfstruct.o \
+	    $(TARGETPFX)sfexpasc.o \
+	    $(TARGETPFX)sfdata.o $(TARGETPFX)sf-nhlua.o \
+	    $(TARGETPFX)panic.o $(TARGETPFX)sf-date.o \
+	    $(TARGETPFX)sf-decl.o $(TARGETPFX)sf-artifact.o \
+	    $(TARGETPFX)sf-dungeon.o $(TARGETPFX)sf-end.o \
+	    $(TARGETPFX)sf-engrave.o $(TARGETPFX)sf-cfgfiles.o \
+	    $(TARGETPFX)sf-files.o $(TARGETPFX)sf-light.o \
+	    $(TARGETPFX)sf-mdlib.o $(TARGETPFX)sf-mkmaze.o \
+	    $(TARGETPFX)sf-mkroom.o $(TARGETPFX)sf-o_init.o \
+	    $(TARGETPFX)sf-region.o $(TARGETPFX)sf-restore.o \
+	    $(TARGETPFX)sf-rumors.o $(TARGETPFX)sf-sys.o \
+	    $(TARGETPFX)sf-timeout.o $(TARGETPFX)sf-track.o \
+	    $(TARGETPFX)sf-version.o $(TARGETPFX)sf-worm.o \
+	    $(TARGETPFX)strutil.o
+SFCTOOLBIN = sfctool
+
+SFFLAGS=-DSFCTOOL -DNOPANICTRACE -DNOCRASHREPORT -DNO_CHRONICLE
+sfutil: $(SFCTOOLBIN)
+	@echo '$(SFCTOOLBIN) is up to date.'
+$(SFCTOOLBIN): $(SFCTOOLOBJS) $(HACKLIB)
+	$(TARGET_CLINK) $(TARGET_LFLAGS) -o $@ $(SFCTOOLOBJS) $(HACKLIB) $(TARGET_LIBS)
+$(TARGETPFX)sfctool.o: sfctool.c $(HACK_H) ../include/sfprocs.h
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c sfctool.c
+$(TARGETPFX)sfdata.o: sfdata.c $(HACK_H) ../include/sfprocs.h ../include/sfproto.h
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c sfdata.c
+$(TARGETPFX)sfexpasc.o: sfexpasc.c $(HACK_H) ../include/sfprocs.h ../include/sfproto.h
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c sfexpasc.c
+$(TARGETPFX)sf-alloc.o: ../src/alloc.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/alloc.c
+$(TARGETPFX)sf-date.o: ../src/date.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/date.c
+$(TARGETPFX)sf-decl.o: ../src/decl.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/decl.c
+$(TARGETPFX)sf-panic.o: panic.c $(CONFIG_H)
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c panic.c
+$(TARGETPFX)sf-monst.o: ../src/monst.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/monst.c
+$(TARGETPFX)sf-objects.o: ../src/objects.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/objects.c
+$(TARGETPFX)sf-sfbase.o: ../src/sfbase.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/sfbase.c
+$(TARGETPFX)sfstruct.o: ../src/sfstruct.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/sfstruct.c
+$(TARGETPFX)sf-artifact.o: ../src/artifact.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/artifact.c
+$(TARGETPFX)sf-dungeon.o: ../src/dungeon.c
+	$(TARGET_CC) $(TARGET_CFLAGS)  $(SFFLAGS) -o $@ -c ../src/dungeon.c
+$(TARGETPFX)sf-end.o: ../src/end.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/end.c
+$(TARGETPFX)sf-engrave.o: ../src/engrave.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/engrave.c
+$(TARGETPFX)sf-cfgfiles.o: ../src/cfgfiles.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/cfgfiles.c
+$(TARGETPFX)sf-files.o: ../src/files.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/files.c
+$(TARGETPFX)sf-light.o: ../src/light.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/light.c
+$(TARGETPFX)sf-mdlib.o: ../src/mdlib.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/mdlib.c
+$(TARGETPFX)sf-mkmaze.o: ../src/mkmaze.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/mkmaze.c
+$(TARGETPFX)sf-mkroom.o: ../src/mkroom.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/mkroom.c
+$(TARGETPFX)sf-o_init.o: ../src/o_init.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/o_init.c
+$(TARGETPFX)sf-region.o: ../src/region.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/region.c
+$(TARGETPFX)sf-restore.o: ../src/restore.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/restore.c
+$(TARGETPFX)sf-rumors.o: ../src/rumors.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/rumors.c
+$(TARGETPFX)sf-sys.o: ../src/sys.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/sys.c
+$(TARGETPFX)sf-timeout.o: ../src/timeout.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/timeout.c
+$(TARGETPFX)sf-track.o: ../src/track.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/track.c
+$(TARGETPFX)sf-version.o: ../src/version.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/version.c
+$(TARGETPFX)sf-worm.o: ../src/worm.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/worm.c
+$(TARGETPFX)sf-nhlua.o: ../src/nhlua.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/nhlua.c
+$(TARGETPFX)sfbase.o: ../src/sfbase.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/sfbase.c
+$(TARGETPFX)strutil.o: ../src/strutil.c
+	$(TARGET_CC) $(TARGET_CFLAGS) $(SFFLAGS) -o $@ -c ../src/strutil.c
+
+sftags: sftags.o
+	$(CLINK) $(LFLAGS) -o $@ sftags.o $(LIBS)
+sftags.o: sftags.c $(HACK_H)
+	$(CC) $(CFLAGS) -c sftags.c
+../include/sfproto.h: sf.tags sftags
+	./sftags
+sfdata.c: sf.tags sftags
+	./sftags
+#       dependencies for sftags
+#       #
+CTAGDEP = ../include/align.h  ../include/artifact.h ../include/artilist.h \
+	  ../include/attrib.h ../include/context.h  ../include/coord.h    \
+	  ../include/decl.h   ../include/dungeon.h  ../include/engrave.h  \
+	  ../include/flag.h   ../include/func_tab.h ../include/global.h   \
+	  ../include/hack.h   ../include/mextra.h   \
+	  ../include/mkroom.h ../include/monst.h    ../include/defsym.h   \
+	  ../include/obj.h    ../include/objclass.h ../include/prop.h     \
+	  ../include/quest.h  ../include/rect.h     ../include/region.h   \
+	  ../include/rm.h     ../include/skills.h   ../include/spell.h    \
+	  ../include/sys.h    ../include/timeout.h  ../include/trap.h     \
+	  ../include/you.h    ../include/onames.h   ../include/wintype.h
+#	  ../include/permonst.h
+CTAGSOPT = --language-force=c --sort=no -D"Bitfield(x,n)=unsigned x : n" --excmd=pattern
+#
+INCL=../include/
+SRC=../src/
+sf.tags: $(CTAGDEP)
+	$(CTAGSCMD) $(CTAGSOPT) -f $@ $(INCL)align.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)artifact.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(SRC)artifact.c
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)artilist.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)attrib.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(SRC)bones.c
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)context.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)coord.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)decl.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(SRC)decl.c
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)dungeon.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)engrave.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(SRC)engrave.c
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)flag.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)func_tab.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)global.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)hack.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)mextra.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)mkroom.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)monst.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)defsym.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)obj.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)objclass.h
+#	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)permonst.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)prop.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)quest.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)rect.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)region.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)rm.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)skills.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)spell.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)stairs.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)sys.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)timeout.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)trap.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)you.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)onames.h
+	$(CTAGSCMD) $(CTAGSOPT) -a -f $@ $(INCL)wintype.h
 
 #	dependencies for dlb
 #
