Makefile.src bit

--- a/sys/unix/Makefile.src
+++ b/sys/unix/Makefile.src
@@ -887,7 +887,8 @@ $(HACK_H): $(CONFIG_H) ../include/align.h ../include/artilist.h \
 		../include/nhlua.h ../include/obj.h ../include/objclass.h \
 		../include/objects.h ../include/permonst.h ../include/prop.h \
 		../include/quest.h ../include/rect.h ../include/region.h \
-		../include/rm.h ../include/seffects.h ../include/selvar.h \
+		../include/rm.h ../include/savefile.h ../include/sfprocs.h \
+		../include/seffects.h ../include/selvar.h \
 		../include/skills.h ../include/sndprocs.h ../include/spell.h \
 		../include/stairs.h ../include/sym.h ../include/sys.h \
 		../include/timeout.h ../include/trap.h ../include/vision.h \
