CI yml typo fix

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -222,7 +222,7 @@ steps:
     make WANT_MACSOUND=1 all
   condition: eq( variables['Agent.OS'], 'Darwin' )
   workingDirectory: $(Agent.BuildDirectory)/$(netHackPath)
-  displayName: 'Building mac full build
+  displayName: 'Building mac full build'
 
 - bash: |
     sudo apt -qq -y install libfl2
